--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
 </head>
+<header>
+    <!-- add header -->
+</header>
+
 <body>
-    
+    <h1>Welcome to the Movie Ticket Booking System</h1>
+    <!-- We need a name for the website -->
+    <h2>Login</h2>
+    <form method="POST" action="/login">
+        <label for="username">Username:</label>
+        <input type="text" name="username" id="username">
+        <label for="password">Password:</label>
+        <input type="password" name="password" id="password">
+        <input type="submit" value="Login">
+    </form>
 </body>
+
+<footer>
+    <!-- add footer -->
+</footer>
+
 </html>
