--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
 </head>
+
 <body>
-    
+
+    <body>
+        <h1>Welcome to the Movie Ticket Booking System</h1>
+        <h2>Register</h2>
+        <form method="POST" action="/register">
+            <label for="username">Username:</label>
+            <input type="text" name="username" id="username">
+            <label for="password">Password:</label>
+            <input type="password" name="password" id="password">
+            <input type="submit" value="Register">
+        </form>
+    </body>
 </body>
+
 </html>
