--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,11 +16,12 @@
     <!-- We need a name for the website -->
     <h2>Login</h2>
     <form method="POST" action="/login">
-        <label for="username">Username:</label>
-        <input type="text" name="username" id="username">
+        <label for="userId">Username:</label>
+        <input type="text" name="userId" id="userId"> <br>
         <label for="password">Password:</label>
-        <input type="password" name="password" id="password">
+        <input type="password" name="password" id="password"> <br>
         <input type="submit" value="Login">
+        <p>Don't have an account?</p><a href="register">Sign Up</a>
     </form>
 </body>
 
