--- a/views/register.ejs
+++ b/views/register.ejs
@@ -14,11 +14,22 @@
         <h1>Welcome to the Movie Ticket Booking System</h1>
         <h2>Register</h2>
         <form method="POST" action="/register">
-            <label for="username">Username:</label>
-            <input type="text" name="username" id="username">
+            <label for="userId">Username:</label>
+            <input type="text" name="userId" id="userId"> <br>
             <label for="password">Password:</label>
-            <input type="password" name="password" id="password">
+            <input type="password" name="password" id="password"> <br>
+            <label for="firstname">First Name:</label>
+            <input type="text" name="firstname" id="firstname"> <br>
+            <label for="lastname">Last Name:</label>
+            <input type="text" name="lastname" id="lastname"> <br>
+            <label for="email">Email:</label>
+            <input type="text" name="email" id="email"> <br>
+            <label for="address">Address:</label>
+            <input type="text" name="address" id="address"> <br>
+            <label for="phone">Phone:</label>
+            <input type="text" name="phone" id="phone"> <br>
             <input type="submit" value="Register">
+            <a href="login">Back</a>
         </form>
     </body>
 </body>
