--- a/views/login.ejs
+++ b/views/login.ejs
@@ -32,7 +32,9 @@
             </div>
                 <input class="btn btn-primary mx-auto d-block" type="submit" value="Login">
                 <p class="text-secondary text-center mt-4">Don't have an account?</p>
-                <button class="btn btn-success mx-auto d-block" href="register">Sign Up</button>
+                <div class="container text-center">
+                    <a class="btn btn-success" href="register">Sign Up</a>
+                </div>
         </form>
     </main>
 </body>
