fix user welcome on booking page

--- a/views/booking.ejs
+++ b/views/booking.ejs
@@ -14,12 +14,12 @@
             <li><a href="booking">Booking</a></li>
             <li><a href="records">Records</a></li>
             <li><a href="profile">Profile</a></li>
-            <li><a href="login">Logout</a></li>
+            <li><a href="logout">Logout</a></li>
         </ul>
     </nav>
 </header>
 <body>
-    <h1>Welcome!</h1>
+    <h1>Welcome! <%= userId %></h1>
     <!-- add username who login after the welcome word -->
     <h2>List of the available movies</h2>
     <section data-position="movies">
