--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -13,7 +13,7 @@
             <li><a href="booking">Booking</a></li>
             <li><a href="records">Records</a></li>
             <li><a href="profile">Profile</a></li>
-            <li><a href="login">Logout</a></li>
+            <li><a href="logout">Logout</a></li>
         </ul>
     </nav>
 </header>
