--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -7,19 +7,23 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <title>Profile</title>
 </head>
-<header>
-    <nav>
-        <ul>
-            <li><a href="booking">Booking</a></li>
-            <li><a href="records">Records</a></li>
-            <li><a href="profile">Profile</a></li>
-            <li><a href="logout">Logout</a></li>
-        </ul>
-    </nav>
-</header>
-<body>
-    <h2>Your profile</h2>
-    <section data-position="user">
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary"> <a
+	class="navbar-brand" href="#">MTBS</a>
+<div class="collapse navbar-collapse" id="navbarText">
+	<ul class="navbar-nav mr-auto">
+		<li class="nav-item"><a class="nav-link" href="booking">Booking</a></li>
+		<li class="nav-item"><a class="nav-link" href="records">Records</a></li>
+		<li class="nav-item"><a class="nav-link" href="profile">Profile</a></li>
+		<li class="nav-item"><a class="nav-link" href="logout">Logout</a>
+		</li>
+	</ul>
+</div>
+</nav>
+<body class="d-flex flex-column" style="min-height: 100vh">
+    <main class="flex-fill">
+    <h1 class="text-center m-5">Your profile</h1>
+    <section class="text-center" data-position="user">
         <% for ( var i=0; i<alltheusers.length; i++) { %>
         <a>Username: </a>
         <%= alltheusers[i].userId %> &nbsp;<br>
@@ -37,5 +41,13 @@
         <%= alltheusers[i].phone %> &nbsp; <br>
         <% } %>
     </section>
+</main>
 </body>
+<footer class="footer mb-5">
+    <div class="container text-center">
+        <span class="text-muted">Contact Number: 233432323</span><br /> 
+        <span class="text-muted">Email: bob@moviebooking.com</span><br /> 
+        <span class="text-muted">Address: 3532 Yonge St, North York, ON M2M 4K2</span>
+    </div>
+</footer>
 </html>
