--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <title>Login</title>
 </head>
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary"> 
@@ -16,18 +17,21 @@
     <main class="flex-fill">
         <h1 class="m-5 text-center">Welcome to the Movie Ticket Booking System</h1>
         <h2 class="m-5 text-center">Login</h2>
-        <form class="container col-lg-4 offset-lg-4" method="POST" action="/login">
+        <form class="container col-lg-4 offset-lg-4" name="form" method="POST" action="/login">
             <div class="row justify-content-center">
                 <div class="col-xs-4">
                     <label for="userId">Username:</label>
                     <input class="form-control col-xs-4" type="text" name="userId" id="userId"
-                        placeholder="Enter username">
+                    autocomplete="off" placeholder="Enter username">
+                    <div id="userId_error">Please fill up your username</div>
                     <br>
                 </div>
                 <div class="col-xs-4">
                     <label for="password">Password:</label>
                     <input class="form-control col-xs-4" type="password" name="password" id="password"
-                        placeholder="Enter password"> <br>
+                    autocomplete="off" placeholder="Enter password"> 
+                    <div id="pass_error">Please fill up your Password</div>
+                    <br>
                 </div>
             </div>
                 <input class="btn btn-primary mx-auto d-block" type="submit" value="Login">
@@ -46,5 +50,41 @@
         <span class="text-muted">Address: 3532 Yonge St, North York, ON M2M 4K2</span>
     </div>
 </footer>
+
+<script>
+
+    // Client-side Validtion
+    var userId = document.forms['form']['userId'];
+    var password = document.forms['form']['password'];
+
+    var userId_error = document.getElementById('userId_error');
+    var pass_error = document.getElementById('pass_error');
+
+    userId.addEventListener('textInput', userId_Verify);
+    password.addEventListener('textInput', pass_Verify);
+
+    userId_error.style.display = "none";
+    pass_error.style.display = "none";
+
+    function userId_Verify() {
+        if (userId.value.length < 2) {
+            userId.style.border = "1px solid red";
+            userId_error.style.display = "block";
+        } else {
+            userId.style.border = "1px solid silver";
+            userId_error.style.display = "none";
+        }
+    }
+    function pass_Verify() {
+        if (password.value.length < 2) {
+            password.style.border = "1px solid red";
+            pass_error.style.display = "block";
+        } else {
+            password.style.border = "1px solid silver";
+            pass_error.style.display = "none";
+        }
+    }
+
+</script>
 
 </html>
