--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,34 +5,210 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <title>Register</title>
 </head>
 
 <body>
-
-    <body>
-        <h1>Welcome to the Movie Ticket Booking System</h1>
-        <h2>Register</h2>
-        <form method="POST" action="/register">
-            <label for="userId">Username:</label>
-            <input type="text" name="userId" id="userId"> <br>
-            <label for="password">Password:</label>
-            <input type="password" name="password" id="password"> <br>
-            <label for="firstname">First Name:</label>
-            <input type="text" name="firstname" id="firstname"> <br>
-            <label for="lastname">Last Name:</label>
-            <input type="text" name="lastname" id="lastname"> <br>
-            <label for="email">Email:</label>
-            <input type="text" name="email" id="email"> <br>
-            <label for="address">Address:</label>
-            <input type="text" name="address" id="address"> <br>
-            <label for="phone">Phone:</label>
-            <input type="text" name="phone" id="phone"> <br>
-            <input type="submit" value="Register">
-            <a href="login">Back</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary"> 
+        <a class="navbar-brand" href="#">MTBS</a>
+    </nav>
+    <body class="d-flex flex-column" style="min-height: 100vh">
+        <main class="flex-fill">
+        <h1 class="m-5 text-center">Welcome to the Movie Ticket Booking System</h1>
+        <h2 class="m-5 text-center">Register</h2>
+        <form class="container col-lg-4 offset-lg-4" method="POST" action="/register">
+            <div class="row justify-content-center">
+                <div class="col-xs-4">
+                    <label for="userId">Username:</label>
+                    <input class="form-control col-xs-4" type="text" name="userId" id="userId"> 
+                    <span class="text-danger" id="userId_error_message"></span>
+                    <br>
+                </div>
+                <div class="col-xs-4">
+                    <label for="password">Password:</label>
+                    <input class="form-control col-xs-4" type="password" name="password" id="password"> 
+                    <span class="text-danger" id="password_error_message"></span>
+                    <br>
+                </div>
+                <div class="col-xs-4">
+                    <label for="firstname">First Name:</label>
+                    <input class="form-control col-xs-4" type="text" name="firstname" id="firstname"> 
+                    <span class="text-danger" id="firstname_error_message"></span>
+                    <br>
+                </div>
+                <div class="col-xs-4">
+                    <label for="lastname">Last Name:</label>
+                    <input class="form-control col-xs-4" type="text" name="lastname" id="lastname"> 
+                    <span class="text-danger" id="lastname_error_message"></span>
+                    <br>
+                </div>
+                <div class="col-xs-4">
+                    <label for="email">Email:</label>
+                    <input class="form-control col-xs-4" type="text" name="email" id="email"> 
+                    <span class="text-danger" id="email_error_message"></span>
+                    <br>
+                </div>
+                <div class="col-xs-4">
+                    <label for="address">Address:</label>
+                    <input class="form-control col-xs-4" type="text" name="address" id="address"> 
+                    <span class="text-danger" id="address_error_message"></span>
+                    <br>
+                </div>
+                <div class="col-xs-4">
+                    <label for="phone">Phone:</label>
+                    <input class="form-control col-xs-4" type="text" name="phone" id="phone"> 
+                    <span class="text-danger" id="phone_error_message"></span>
+                    <br>
+                </div>
+            </div>
+            <input class="btn btn-primary mx-auto d-block" type="submit" value="Register">
+            <div class="container text-center">
+                <a class="btn btn-secondary mt-2 mb-5" href="login">Back</a>
+            </div>
         </form>
-    </body>
+    </main>
 </body>
+
+<footer class="footer mb-5">
+    <div class="container text-center">
+        <span class="text-muted">Contact Number: 233432323</span><br /> 
+        <span class="text-muted">Email: bob@moviebooking.com</span><br /> 
+        <span class="text-muted">Address: 3532 Yonge St, North York, ON M2M 4K2</span>
+    </div>
+</footer>
+
+<script>
+    // Client-side Validtion
+    $(function () {
+        $("#userId_error_message").hide();
+        $("#password_error_message").hide();
+        $("#firstname_error_message").hide();
+        $("#lastname_error_message").hide();
+        $("#email_error_message").hide();
+        $("#address_error_message").hide();
+        $("#phone_error_message").hide();
+
+        $("#userId").focusout(function () {
+            check_userId();
+        });
+
+        $("#password").focusout(function () {
+            check_password();
+        });
+
+        $("#firstname").focusout(function () {
+            check_firstname();
+        });
+
+        $("#lastname").focusout(function () {
+            check_lastname();
+        });
+
+        $("#email").focusout(function () {
+            check_email();
+        });
+
+        $("#address").focusout(function () {
+            check_address();
+        });
+
+        $("#phone").focusout(function () {
+            check_phone();
+        });
+
+        function check_userId() {
+            var pattern = /^[a-zA-Z0-9]*$/;
+            var userId = $("#userId").val();
+            if (pattern.test(userId) && userId !== '') {
+                $("#userId_error_message").hide();
+                $("#userId").css("border-bottom", "2px solid #34F458");
+            } else {
+                $("#userId_error_message").html("Should contain only characters and numbers");
+                $("#userId_error_message").show();
+                $("#userId").css("border-bottom", "2px solid #F90A0A");
+            }
+        }
+
+        function check_password() {
+            var password_length = $("#password").val().length;
+            if (password_length < 5) {
+                $("#password_error_message").html("At least 5 Characters");
+                $("#password_error_message").show();
+                $("#password").css("border-bottom", "2px solid #F90A0A");
+            } else {
+                $("#password_error_message").hide();
+                $("#password").css("border-bottom", "2px solid #34F458");
+            }
+        }
+
+        function check_firstname() {
+            var pattern = /^[a-zA-Z]*$/;
+            var firstname = $("#firstname").val();
+            if (pattern.test(firstname) && firstname !== '') {
+                $("#firstname_error_message").hide();
+                $("#firstname").css("border-bottom", "2px solid #34F458");
+            } else {
+                $("#firstname_error_message").html("Should contain only Characters");
+                $("#firstname_error_message").show();
+                $("#firstname").css("border-bottom", "2px solid #F90A0A");
+            }
+        }
+
+        function check_lastname() {
+            var pattern = /^[a-zA-Z]*$/;
+            var lastname = $("#lastname").val();
+            if (pattern.test(lastname) && lastname !== '') {
+                $("#lastname_error_message").hide();
+                $("#lastname").css("border-bottom", "2px solid #34F458");
+            } else {
+                $("#lastname_error_message").html("Should contain only Characters");
+                $("#lastname_error_message").show();
+                $("#lastname").css("border-bottom", "2px solid #F90A0A");
+            }
+        }
+
+        function check_email() {
+            var pattern = /^([\w-\.]+@([\w-]+\.)+[\w-]{2,4})?$/;
+            var email = $("#email").val();
+            if (pattern.test(email) && email !== '') {
+                $("#email_error_message").hide();
+                $("#email").css("border-bottom", "2px solid #34F458");
+            } else {
+                $("#email_error_message").html("Invalid Email");
+                $("#email_error_message").show();
+                $("#email").css("border-bottom", "2px solid #F90A0A");
+            }
+        }
+
+        function check_address() {
+            var pattern = /^[a-zA-Z0-9,]*$/;
+            var address = $("#address").val();
+            if (pattern.test(address) && address !== '') {
+                $("#address_error_message").hide();
+                $("#form_email").css("border-bottom", "2px solid #34F458");
+            } else {
+                $("#address_error_message").html("Invalid characters in address");
+                $("#address_error_message").show();
+                $("#form_email").css("border-bottom", "2px solid #F90A0A");
+            }
+        }
+
+        function check_phone() {
+            var phone_length = $("#phone").val().length;
+            if (phone_length < 5) {
+                $("#phone_error_message").html("At least 5 numbers");
+                $("#phone_error_message").show();
+                $("#phone").css("border-bottom", "2px solid #F90A0A");
+            } else {
+                $("#phone_error_message").hide();
+                $("#phone").css("border-bottom", "2px solid #34F458");
+            }
+        }
+    });
+
+</script>
 
 </html>
