--- a/views/booking.ejs
+++ b/views/booking.ejs
@@ -12,10 +12,10 @@
 	class="navbar-brand" href="#">MTBS</a>
 <div class="collapse navbar-collapse" id="navbarText">
 	<ul class="navbar-nav mr-auto">
-		<li class="nav-item"><a class="nav-link" href="booking">Booking</a></li>
-		<li class="nav-item"><a class="nav-link" href="records/">Records</a></li>
-		<li class="nav-item"><a class="nav-link" href="profile">Profile</a></li>
-		<li class="nav-item"><a class="nav-link" href="logout">Logout</a>
+		<li class="nav-item"><a class="nav-link" href="/booking">Booking</a></li>
+		<li class="nav-item"><a class="nav-link" href="/records/">Records</a></li>
+		<li class="nav-item"><a class="nav-link" href="/profile">Profile</a></li>
+		<li class="nav-item"><a class="nav-link" href="/logout">Logout</a>
 		</li>
 	</ul>
 </div>
