--- a/views/records.ejs
+++ b/views/records.ejs
@@ -8,17 +8,20 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <title>Booking Records</title>
 </head>
-<header>
-    <nav>
-        <ul>
-            <li><a href="booking">Booking</a></li>
-            <li><a href="records">Records</a></li>
-            <li><a href="profile">Profile</a></li>
-            <li><a href="logout">Logout</a></li>
-        </ul>
-    </nav>
-</header>
-<body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary"> <a
+	class="navbar-brand" href="#">MTBS</a>
+<div class="collapse navbar-collapse" id="navbarText">
+	<ul class="navbar-nav mr-auto">
+		<li class="nav-item"><a class="nav-link" href="/booking">Booking</a></li>
+		<li class="nav-item"><a class="nav-link" href="/records">Records</a></li>
+		<li class="nav-item"><a class="nav-link" href="/profile">Profile</a></li>
+		<li class="nav-item"><a class="nav-link" href="/logout">Logout</a>
+		</li>
+	</ul>
+</div>
+</nav>
+<body class="d-flex flex-column" style="min-height: 100vh">
+    <main class="flex-fill">
     <h2>List of your booked ticket</h2>
     <section data-position="order">
         <table class="table table-hover table-bordered m-3 text-center">  
@@ -40,7 +43,7 @@
     </section>
 
     <h2>Update a booking</h2>
-    <form method="POST" action="/booking/update">
+    <form method="PUT" action="/booking/update">
         <label for="orderId">Choose a booking:</label>
         <input type="text" name="orderId" id="orderId">
         <label for="movieId">Pick a new movie:</label>
@@ -51,11 +54,18 @@
     </form>
 
     <h2>Delete a booking</h2>
-    <form method="POST" action="/booking/delete">
+    <form method="DELETE" action="/booking/delete">
         <label for="orderId">Choose a booking:</label>
         <input type="text" name="orderId" id="orderId">
         <input type="submit" value="Confirm">
     </form>
+</main>
 </body>
-
+<footer class="footer mb-5">
+    <div class="container text-center">
+        <span class="text-muted">Contact Number: 233432323</span><br /> 
+        <span class="text-muted">Email: bob@moviebooking.com</span><br /> 
+        <span class="text-muted">Address: 3532 Yonge St, North York, ON M2M 4K2</span>
+    </div>
+</footer>
 </html>
