--- a/views/records.ejs
+++ b/views/records.ejs
@@ -33,7 +33,7 @@
             </tr>
             <% for ( var i=0; i<alltheorders.length; i++) { %>
             <tr>
-                <th class="fw-normal"><%= alltheorders[i].orderId %></th>
+                <th class="fw-normal"><%= alltheorders[i]._id %></th>
                 <th class="fw-normal"><%= alltheorders[i].userId %></th>
                 <th class="fw-normal"><%= alltheorders[i].movieId %></th>
                 <th class="fw-normal"><%= alltheorders[i].movieDateTime %></th>
