--- a/views/booking.ejs
+++ b/views/booking.ejs
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <title>Booking</title>
 </head>
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary"> <a
@@ -22,20 +24,21 @@
 </nav>
 <body class="d-flex flex-column" style="min-height: 100vh">
     <main class="flex-fill">
-    <h1 class="text-warning">Welcome! <%= userId %></h1>
+        <h1 class="text-warning">Welcome! <%= userId %>
+        </h1>
 
-    <h1 class="text-center m-4">List of the available movies</h1>
-    <section data-position="movies">
-        <table class="table table-hover table-bordered m-3 text-center">  
-            <tr class="table-info">
-                <th>Movie ID</th>
-                <th>Name</th>
-                <th>Director</th>
-                <th>Length</th>
-                <th>Category</th>
-                <th>Year_released</th>
-                <th>Ticket Price $</th>
-            </tr>
+        <h1 class="text-center m-4">List of the available movies</h1>
+        <section data-position="movies">
+            <table class="table table-hover table-bordered m-3 text-center">
+                <tr class="table-info">
+                    <th>Movie ID</th>
+                    <th>Name</th>
+                    <th>Director</th>
+                    <th>Length</th>
+                    <th>Category</th>
+                    <th>Year_released</th>
+                    <th>Ticket Price $</th>
+                </tr>
             <% for ( var i=0; i<allthemovies.length; i++) { %>
             <tr>
                 <th class="fw-normal"><%= allthemovies[i].movieId %></th>
@@ -52,8 +55,6 @@
 
     <h2 class="text-center m-4">Book a Ticket</h2>
     <form class="container col-lg-4 offset-lg-4" method="POST" action="/booking">
-        <label for="userId">Order ID:</label>
-        <input class="form-control col-xs-4" type="text" name="orderId" id="orderId">
         <label for="userId">User ID:</label>
         <input class="form-control col-xs-4" type="text" name="userId" id="userId" value=<%= userId %>>
         <label for="movieId">Choose a movie:</label>
@@ -65,9 +66,12 @@
                 </option>
                 <% } %>
         </select>
+        <span class="text-danger" id="movieId_error_message"></span>
         <br>
         <label for="movieDateTime">Choose a date/time:</label>
-        <input class="form-control col-xs-4" type="datetime-local" name="movieDateTime" id="movieDateTime"> <br>
+        <input class="form-control col-xs-4" type="datetime-local" name="movieDateTime" id="movieDateTime"> 
+        <span class="text-danger" id="movieDateTime_error_message"></span>
+        <br>
         <input class="btn btn-primary mx-auto d-block" type="submit" value="Confirm">
     </form>
     <br>
@@ -82,4 +86,52 @@
         <span class="text-muted">Address: 3532 Yonge St, North York, ON M2M 4K2</span>
     </div>
 </footer>
+
+<script>
+    // Client-side Validtion
+    $(function () {
+        $("#movieId_error_message").hide();
+        $("#movieDateTime_error_message").hide();
+
+
+
+        // ensure the two input field are filled, so call these two functions beforehand
+        check_movieId();
+        check_movieDateTime();
+
+        $("#movieId").focusout(function () {
+            check_movieId();
+        });
+
+        $("#movieDateTime").focusout(function () {
+            check_movieDateTime();
+        });
+
+        function check_movieId() {
+            var movieId = $("#movieId").val();
+            if (movieId !== 'Select from the list') {
+                $("#movieId_error_message").hide();
+                $("#movieId").css("border-bottom", "2px solid #34F458");
+            } else {
+                $("#movieId_error_message").html("Please pick one movie");
+                $("#movieId_error_message").show();
+                $("#movieId").css("border-bottom", "2px solid #F90A0A");
+            }
+        }
+
+        function check_movieDateTime() {
+            var movieDateTime = $("#movieDateTime").val();
+            if (!movieDateTime) {
+                $("#movieDateTime_error_message").html("Please choose a date");
+                $("#movieDateTime_error_message").show();
+                $("#movieDateTime").css("border-bottom", "2px solid #F90A0A");
+            } else {
+                $("#movieDateTime_error_message").hide();
+                $("#movieDateTime").css("border-bottom", "2px solid #34F458");
+            }
+        }
+    });
+
+</script>
+
 </html>
