--- a/views/booking.ejs
+++ b/views/booking.ejs
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,24 +9,44 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <title>Booking</title>
 </head>
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary"> <a
-	class="navbar-brand" href="#">MTBS</a>
-<div class="collapse navbar-collapse" id="navbarText">
-	<ul class="navbar-nav mr-auto">
-		<li class="nav-item"><a class="nav-link" href="/booking">Booking</a></li>
-		<li class="nav-item"><a class="nav-link" href="/records/">Records</a></li>
-		<li class="nav-item"><a class="nav-link" href="/profile">Profile</a></li>
-		<li class="nav-item"><a class="nav-link" href="/logout">Logout</a>
-		</li>
-	</ul>
-</div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary"> 
+    <a class="navbar-brand" href="#">MTBS</a>
+    <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav mr-auto">
+            <li><a class="nav-link active" href="/booking">Booking</a></li>
+            <li><a class="nav-link" href="/records/">Records</a></li>
+            <li><a class="nav-link" href="/profile">Profile</a></li>
+        </ul>
+    </div>
+    <ul class="nav navbar-nav navbar-right">
+        <li class="text-light nav-link">
+            <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 17">
+                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+            </svg> <%= userId %>
+        </li>
+        <li><a class="nav-link" href="/logout">
+            <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" fill="currentColor" class="bi bi-box-arrow-left" viewBox="0 0 16 17">
+                <path fill-rule="evenodd" d="M6 12.5a.5.5 0 0 0 .5.5h8a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5h-8a.5.5 0 0 0-.5.5v2a.5.5 0 0 1-1 0v-2A1.5 1.5 0 0 1 6.5 2h8A1.5 1.5 0 0 1 16 3.5v9a1.5 1.5 0 0 1-1.5 1.5h-8A1.5 1.5 0 0 1 5 12.5v-2a.5.5 0 0 1 1 0v2z"/>
+                <path fill-rule="evenodd" d="M.146 8.354a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L1.707 7.5H10.5a.5.5 0 0 1 0 1H1.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3z"/>
+              </svg> Logout</a>
+        </li>
+    </ul>
 </nav>
 <body class="d-flex flex-column" style="min-height: 100vh">
     <main class="flex-fill">
-        <h1 class="text-warning">Welcome! <%= userId %>
-        </h1>
-
+        <h2 class="text-warning nav-link">Welcome! <%= userId %></h2>
         <h1 class="text-center m-4">List of the available movies</h1>
+        <form class="container col-lg-4 offset-lg-4" action="/booking/findbyname" method="GET">
+            <div class="input-group mb-3">
+                <input type="text" class="form-control" name="name" placeholder="Enter movie name.." />
+                <button type="submit" class="btn btn-primary mx-auto">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                    </svg>
+                </button>
+            </div>
+        </form>
         <section data-position="movies">
             <table class="table table-hover table-bordered m-3 text-center">
                 <tr class="table-info">
@@ -36,7 +55,7 @@
                     <th>Director</th>
                     <th>Length</th>
                     <th>Category</th>
-                    <th>Year_released</th>
+                    <th>Publish Year</th>
                     <th>Ticket Price $</th>
                 </tr>
             <% for ( var i=0; i<allthemovies.length; i++) { %>
@@ -53,12 +72,7 @@
         </table>
     </section>
     <br />
-    <h2 class="text-center m-4">Search by movie name</h2>
-    <form class="container col-lg-4 offset-lg-4" action="/booking/findbyname" method="GET">
-    <input type="text" name="name" placeholder="Enter movie name" />
-    <input type="submit" value="Search name" />
-    </form>
-    <br />
+    
 
     <h2 class="text-center m-4">Book a Ticket</h2>
     <form class="container col-lg-4 offset-lg-4" method="POST" action="/booking">
@@ -88,9 +102,18 @@
 </body>
 <footer class="footer mb-5">
     <div class="container text-center">
-        <span class="text-muted">Contact Number: 233432323</span><br /> 
-        <span class="text-muted">Email: bob@moviebooking.com</span><br /> 
-        <span class="text-muted">Address: 3532 Yonge St, North York, ON M2M 4K2</span>
+        <span class="text-muted">
+            <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" fill="currentColor" class="bi bi-telephone" viewBox="0 0 16 17">
+                <path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
+            </svg> +1 (233) 432-3232</span><br /> 
+        <span class="text-muted">
+            <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 17">
+                <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2zm13 2.383-4.758 2.855L15 11.114v-5.73zm-.034 6.878L9.271 8.82 8 9.583 6.728 8.82l-5.694 3.44A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.739zM1 11.114l4.758-2.876L1 5.383v5.73z"/>
+            </svg> bob@moviebooking.com</span><br /> 
+        <span class="text-muted">
+            <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" fill="currentColor" class="bi bi-map" viewBox="0 0 16 17">
+                <path fill-rule="evenodd" d="M15.817.113A.5.5 0 0 1 16 .5v14a.5.5 0 0 1-.402.49l-5 1a.502.502 0 0 1-.196 0L5.5 15.01l-4.902.98A.5.5 0 0 1 0 15.5v-14a.5.5 0 0 1 .402-.49l5-1a.5.5 0 0 1 .196 0L10.5.99l4.902-.98a.5.5 0 0 1 .415.103zM10 1.91l-4-.8v12.98l4 .8V1.91zm1 12.98 4-.8V1.11l-4 .8v12.98zm-6-.8V1.11l-4 .8v12.98l4-.8z"/>
+            </svg> 3532 Yonge St, North York, ON M2M 4K2</span>
     </div>
 </footer>
 
