--- a/views/booking.ejs
+++ b/views/booking.ejs
@@ -19,11 +19,11 @@
         </ul>
     </div>
     <ul class="nav navbar-nav navbar-right">
-        <li class="text-light nav-link">
+        <li><a class="nav-link text-light" href="/profile">
             <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 17">
                 <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
                 <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
-            </svg> <%= userId %>
+            </svg> <%= userId %></a>
         </li>
         <li><a class="nav-link" href="/logout">
             <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" fill="currentColor" class="bi bi-box-arrow-left" viewBox="0 0 16 17">
@@ -35,7 +35,6 @@
 </nav>
 <body class="d-flex flex-column" style="min-height: 100vh">
     <main class="flex-fill">
-        <h2 class="text-warning nav-link">Welcome! <%= userId %></h2>
         <h1 class="text-center m-4">List of the available movies</h1>
         <form class="container col-lg-4 offset-lg-4" action="/booking/findbyname" method="GET">
             <div class="input-group mb-3">
@@ -161,5 +160,6 @@
     });
 
 </script>
+db.movies.deleteOne( { movieId: "1001" } )
 
 </html>
